// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueList compact render should render array values separated by ", " 1`] = `
Array [
  <span
    key="0"
  >
    first_value
  </span>,
  <span
    key="1"
  >
    , 
  </span>,
  <span
    key="2"
  >
    second_value
  </span>,
  <span
    key="3"
  >
    , 
  </span>,
  <span
    key="4"
  >
    third value
  </span>,
]
`;

exports[`ValueList compact render should render multidate in multiple lines 1`] = `
Array [
  <span
    key="0"
  >
    first_value
  </span>,
  <span
    key="1"
  >
    <br />
  </span>,
  <span
    key="2"
  >
    second_value
  </span>,
  <span
    key="3"
  >
    <br />
  </span>,
  <span
    key="4"
  >
    third value
  </span>,
]
`;

exports[`ValueList compact render should render multidaterange in multiple lines 1`] = `
Array [
  <span
    key="0"
  >
    first_value
  </span>,
  <span
    key="1"
  >
    <br />
  </span>,
  <span
    key="2"
  >
    second_value
  </span>,
  <span
    key="3"
  >
    <br />
  </span>,
  <span
    key="4"
  >
    third value
  </span>,
]
`;

exports[`ValueList compact render should rendern icons when the value has one 1`] = `
Array [
  <span
    key="0"
  >
    first_value
  </span>,
  <span
    key="1"
  >
    , 
  </span>,
  <span
    key="2"
  >
    <Connect(Icon)
      className="item-icon item-icon-center"
      data={
        Object {
          "icon": "icon2",
        }
      }
    />
    second_value
  </span>,
  <span
    key="3"
  >
    , 
  </span>,
  <span
    key="4"
  >
    third value
  </span>,
]
`;

exports[`ValueList should render the values as a ul list 1`] = `
<ul
  className="multiline"
>
  <li
    key="label_0"
  >
    first_value
  </li>
  <li
    key="label_1"
  >
    second_value
  </li>
  <li
    key="label_2"
  >
    third value
  </li>
</ul>
`;

exports[`ValueList should rendern icons when the value has one 1`] = `
<ul
  className="multiline"
>
  <li
    key="label_0"
  >
    <Connect(Icon)
      className="item-icon item-icon-center"
      data={
        Object {
          "icon": "icon",
        }
      }
    />
    first_value
  </li>
  <li
    key="label_1"
  >
    <Connect(Icon)
      className="item-icon item-icon-center"
      data={
        Object {
          "icon": "icon2",
        }
      }
    />
    second_value
  </li>
  <li
    key="label_2"
  >
    third value
  </li>
</ul>
`;
